--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-seaborn==0.11.2
-streamlit==1.22.0
-numpy==1.23.5
-matplotlib==3.7.1
-pandas==1.5.3
-scikit_learn==1.2.2
-tensorflow==2.10.0
-pillow==9.0.0
+seaborn
+streamlit
+numpy
+matplotlib
+pandas
+scikit_learn
+tensorflow
+pillow
